--- a/src/main/resources/prometheus.yml
+++ b/src/main/resources/prometheus.yml
@@ -1,14 +1,14 @@
 global:
-  scrape_interval: 15s # Default scrape interval
+  scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'prometheus' # Job to scrape Prometheus metrics
+  - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['localhost:9090']
 
   - job_name: 'spring-actuator'
-    metrics_path: '/actuator/prometheus' # Job to scrape application metrics
+    metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['192.168.1.34:8080']
